tests/data/PRD_v1.22/Approved/NegativeSyntaxTest/Core_NonSafeness/Core_NonSafeness-input.rifps
Document( 
    Prefix(ex <http://example.org/example#>) 
    Prefix(pred <http://www.w3.org/2007/rif-builtin-predicate#>) 
    Group( 
      Forall ?y ?z (
	    If And(
	            External ( pred:numeric-not-equal( ?y ?z ) )
		    External(pred:numeric-greater-than(?z 0))
	    ) Then Do (
		    Assert (ex:p(?y))
	    )
      )
    ) 
  )
